--- a/styles/text.module.css
+++ b/styles/text.module.css
@@ -75,3 +75,32 @@
       font-size: 32px;
     }
   }
+
+
+
+
+  .tableText {
+    margin: 6px 16px 6px 16px;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(231, 231, 231);
+    transition: font-size 0.3s ease;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .tableText {
+      font-size: 8px;
+    }
+  }
+  
+  @media screen and (min-width: 769px) and (max-width: 1368px) {
+    .tableText {
+      font-size: 12px;
+    }
+  }
+  
+  @media screen and (min-width: 1369px) {
+    .tableText {
+      font-size: 16px;
+    }
+  }
