--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,3 +72,208 @@ transition: transform 0.2s ease;
 .hover-scale2:hover {
 transform: scale(1.2); 
 }
+
+
+.carousel .control-arrow, .carousel.carousel-slider .control-arrow {
+    -webkit-transition: all 0.25s ease-in;
+    -moz-transition: all 0.25s ease-in;
+    -ms-transition: all 0.25s ease-in;
+    -o-transition: all 0.25s ease-in;
+    transition: all 0.25s ease-in;
+    opacity: 0.3;
+    filter: alpha(opacity=40);
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: 0;
+    cursor: progress; }
+    .carousel .control-arrow:focus, .carousel .control-arrow:hover {
+      opacity: 0.9;
+      filter: alpha(opacity=90); }
+    .carousel .control-arrow:before, .carousel.carousel-slider .control-arrow:before {
+      margin: 15px 4px;
+      display: inline-block;
+      border-top: 8px solid transparent;
+      border-bottom: 8px solid transparent;
+      content: ''; }
+    .carousel .control-disabled.control-arrow {
+      opacity: 0;
+      filter: alpha(opacity=0);
+      cursor: inherit;
+      display: none; }
+    .carousel .control-prev.control-arrow {
+      left: 0; }
+      .carousel .control-prev.control-arrow:before {
+        border-right: 8px solid rgb(245, 245, 245); }
+    .carousel .control-next.control-arrow {
+      right: 0; }
+      .carousel .control-next.control-arrow:before {
+        border-left: 8px solid rgb(245, 245, 245); }
+  
+  .carousel-root {
+    outline: none; }
+  
+    .carousel img {
+      width: 100%;
+      display: inline-block;
+      pointer-events: none;
+      border-radius: 12px; }
+    .carousel .control-arrow {
+      outline: 0;
+      border: 0;
+      margin-left: -12px;
+      margin-right: -12px; }
+    .carousel .thumbs-wrapper {
+      margin: 20px;
+      overflow: hidden; }
+    .carousel .thumbs {
+      -webkit-transition: all 0.15s ease-in;
+      -moz-transition: all 0.15s ease-in;
+      -ms-transition: all 0.15s ease-in;
+      -o-transition: all 0.15s ease-in;
+      transition: all 0.15s ease-in;
+      -webkit-transform: translate3d(0, 0, 0);
+      -moz-transform: translate3d(0, 0, 0);
+      -ms-transform: translate3d(0, 0, 0);
+      -o-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      position: relative;
+      list-style: none;
+      white-space: nowrap; }
+    .carousel .thumb {
+      -webkit-transition: border 0.15s ease-in;
+      -moz-transition: border 0.15s ease-in;
+      -ms-transition: border 0.15s ease-in;
+      -o-transition: border 0.15s ease-in;
+      transition: border 0.15s ease-in;
+      display: inline-block;
+      margin-right: 6px;
+      white-space: nowrap;
+      overflow: hidden;
+      border: 3px solid #fff;
+      padding: 2px; }
+      .carousel .thumb:focus {
+        border: 3px solid #ccc;
+        outline: none; }
+      .carousel .thumb.selected, .carousel .thumb:hover {
+        border: 3px solid #333; }
+      .carousel .thumb img {
+        vertical-align: middle; }
+    .carousel.carousel-slider {
+      position: relative;
+      margin: 0;
+      border-radius: 12px; }
+      .carousel.carousel-slider .control-arrow {
+        top: 0;
+        color: rgb(245, 245, 245);
+        font-size: 42px;
+        bottom: 0;
+        margin-top: 0;
+        padding: 10px; }
+        .carousel.carousel-slider .control-arrow:hover {
+          background: rgba(0, 0, 0, 0.2); }
+    .carousel .slider-wrapper {
+      margin: auto;
+      width: 100%;
+      -webkit-transition: height 0.15s ease-in;
+      -moz-transition: height 0.15s ease-in;
+      -ms-transition: height 0.15s ease-in;
+      -o-transition: height 0.15s ease-in;
+      transition: height 0.15s ease-in; }
+      .carousel .slider-wrapper.axis-horizontal .slider {
+        -ms-box-orient: horizontal;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: flex; }
+        .carousel .slider-wrapper.axis-horizontal .slider .slide {
+          flex-direction: column;
+          flex-flow: column; }
+      .carousel .slider-wrapper.axis-vertical {
+        -ms-box-orient: horizontal;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: flex; }
+        .carousel .slider-wrapper.axis-vertical .slider {
+          -webkit-flex-direction: column;
+          flex-direction: column; }
+    .carousel .slider {
+      margin: 0;
+      padding: 0;
+      position: relative;
+      list-style: none;
+      width: 100%; }
+      .carousel .slider.animated {
+        -webkit-transition: all 0.35s ease-in-out;
+        -moz-transition: all 0.35s ease-in-out;
+        -ms-transition: all 0.35s ease-in-out;
+        -o-transition: all 0.35s ease-in-out;
+        transition: all 0.35s ease-in-out; }
+    .carousel .slide {
+      min-width: 100%;
+      margin: 0;
+      text-align: center; }
+      .carousel .slide img {
+        width: 100%;
+        vertical-align: middle;
+        border: 0; }
+      .carousel .slide .legend {
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        margin-left: -45%;
+        width: 90%;
+        border-radius: 10px;
+        background: #000;
+        color: #fff;
+        padding: 10px;
+        font-size: 12px;
+        text-align: center;
+        opacity: 0.25;
+        -webkit-transition: opacity 0.35s ease-in-out;
+        -moz-transition: opacity 0.35s ease-in-out;
+        -ms-transition: opacity 0.35s ease-in-out;
+        -o-transition: opacity 0.35s ease-in-out;
+        transition: opacity 0.35s ease-in-out; }
+    .carousel .control-dots {
+      position: relative;
+      bottom: 0;
+      padding: 0;
+      text-align: center;
+      width: 100%;
+      z-index: 1; }
+      @media (min-width: 960px) {
+        .carousel .control-dots {
+          bottom: 0; } }
+      .carousel .control-dots .dot {
+        -webkit-transition: opacity 0.25s ease-in;
+        -moz-transition: opacity 0.25s ease-in;
+        -ms-transition: opacity 0.25s ease-in;
+        -o-transition: opacity 0.25s ease-in;
+        transition: opacity 0.25s ease-in;
+        opacity: 0.3;
+        filter: alpha(opacity=30);
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+        background: rgb(239, 239, 239);
+        border-radius: 50%;
+        width: 6px;
+        height: 6px;
+        cursor: pointer;
+        display: inline-block;
+        margin: 0 10px; }
+        .carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+          opacity: 1;
+          filter: alpha(opacity=100); }
+    .carousel:hover .slide .legend {
+      opacity: 1; }
+  
