--- a/styles/glow.module.css
+++ b/styles/glow.module.css
@@ -1,174 +1,172 @@
-
 .glowInnerBlack {
-    position: relative;
-    background: black;
-    height: 94%;
-    border-radius: 5px;
-  }
-  
-  .outlineglowD:before, .outlineglowD:after {
-    content: '';
-  position: absolute;
-  background: linear-gradient(45deg , #00bbff, #9978e5, #00bbff);
-    background-size: 600%;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  border-radius : 8px;
-  border-radius: inherit;
-    animation: steam 10s linear infinite;
-    filter: blur(2px) brightness(0.9);
-  transition: all ease-in-out 0.25s;
-  }
-  
-  
-  @keyframes steam {
-    0% {
-        background-position: 0 0; 
-    }
-    50% {
-        background-position: 200% 0;
-    }
-    100% {
-        background-position: 0 0;
-    }
-  }
-  
-  .outlineglowD:hover:after, .outlineglowD:active:after {
-    filter: blur(10px) brightness(0.9);
-  }
-  
-  .outlineglowL:before, .outlineglowL:after {
-  content: '';
-  position: absolute;
-  background: linear-gradient(45deg , #ffb300, #ff7235, #ffb300);
-  background-size: 600%;
-  width: calc(100%);
-  height: calc(100%);
-  z-index: 0;
-  border-radius : 8px;
-  border-radius: inherit;
-  animation: steam 10s linear infinite;
-  filter: blur(2px) brightness(0.9);
-  transition: all ease-in-out 0.25s;
-  }
-  
-  
-  @keyframes steam {
-  0% {
-      background-position: 0 0; 
-  }
-  50% {
-      background-position: 200% 0;
-  }
-  100% {
-      background-position: 0 0;
-  }
-  }
-  
-  .outlineglowL:hover:after, .outlineglowL:active:after {
-  filter: blur(10px) brightness(0.9);
-  }
-  
-  .fullglowD:before, .fullglowD:after {
-      content: '';
-    position: absolute;
-    background: linear-gradient(45deg , #00bbff, #9978e5, #00bbff);
-      background-size: 600%;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    border-radius : 8px;
-    border-radius: inherit;
-      animation: steam 10s linear infinite;
-      filter: blur(0.25px) brightness(0.9);
-    transition: all ease-in-out 0.25s;
-  }
-  
-  
-  @keyframes steam {
-      0% {
-          background-position: 0 0; 
-      }
-      50% {
-          background-position: 200% 0;
-      }
-      100% {
-          background-position: 0 0;
-      }
-  }
-  
-  .fullglowD:hover:after, .fullglowD:active:after {
-      filter: blur(10px) brightness(0.9);
-  }
-  
-  
-  .fullglowL:before, .fullglowL:after {
-      content: '';
-      position: absolute;
-      background: linear-gradient(45deg , #ffb300, #ff7235, #ffb300);
-      background-size: 600%;
-      width: calc(100%);
-      height: calc(100%);
-      z-index: 0;
-      border-radius : 8px;
-      border-radius: inherit;
-      animation: steam 10s linear infinite;
-      filter: blur(0.25px) brightness(0.9);
-      transition: all ease-in-out 0.25s;
-  }
-  
-  
-  @keyframes steam {
-      0% {
-          background-position: 0 0; 
-      }
-      50% {
-          background-position: 200% 0;
-      }
-      100% {
-          background-position: 0 0;
-      }
-  }
-  
-  .fullglowL:hover:after, .fullglowL:active:after {
-      filter: blur(10px) brightness(0.9);
-  }
-  
-  
-  .glowInnerBlack {
   position: relative;
   background: black;
   height: 94%;
   border-radius: 5px;
+}
+
+.outlineglowD:before,
+.outlineglowD:after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #00bbff, #9978e5, #00bbff);
+  background-size: 600%;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamD 10s linear infinite;
+  filter: blur(2px) brightness(0.9);
+  transition: all ease-in-out 0.25s;
+}
+
+@keyframes steamD {
+  0% {
+    background-position: 0 0;
   }
-  
-  .textAnimatedGlowD {
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.outlineglowD:hover:after,
+.outlineglowD:active:after {
+  filter: blur(10px) brightness(0.9);
+}
+
+.outlineglowL:before,
+.outlineglowL:after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #ffb300, #ff7235, #ffb300);
+  background-size: 600%;
+  width: calc(100%);
+  height: calc(100%);
+  z-index: 0;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamL 10s linear infinite;
+  filter: blur(2px) brightness(0.9);
+  transition: all ease-in-out 0.25s;
+}
+
+@keyframes steamL {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.outlineglowL:hover:after,
+.outlineglowL:active:after {
+  filter: blur(10px) brightness(0.9);
+}
+
+.fullglowD:before,
+.fullglowD:after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #00bbff, #9978e5, #00bbff);
+  background-size: 600%;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamFullD 10s linear infinite;
+  filter: blur(0.25px) brightness(0.9);
+  transition: all ease-in-out 0.25s;
+}
+
+@keyframes steamFullD {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.fullglowD:hover:after,
+.fullglowD:active:after {
+  filter: blur(10px) brightness(0.9);
+}
+
+.fullglowL:before,
+.fullglowL:after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(45deg, #ffb300, #ff7235, #ffb300);
+  background-size: 600%;
+  width: calc(100%);
+  height: calc(100%);
+  z-index: 0;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamFullL 10s linear infinite;
+  filter: blur(0.25px) brightness(0.9);
+  transition: all ease-in-out 0.25s;
+}
+
+@keyframes steamFullL {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.fullglowL:hover:after,
+.fullglowL:active:after {
+  filter: blur(10px) brightness(0.9);
+}
+
+.glowInnerBlack {
+  position: relative;
+  background: black;
+  height: 94%;
+  border-radius: 5px;
+}
+
+.textAnimatedGlowD {
   text-align: center;
-  
-  background: linear-gradient(45deg , #00bbff, #9978e5, #00bbff);
+  background: linear-gradient(45deg, #00bbff, #9978e5, #00bbff);
   background-size: 350%;
   color: #000;
-  background-clip: text;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shine 12s linear infinite;
-  
-  }
-  
-  .textAnimatedGlowL {
+  animation: shineD 12s linear infinite;
+}
+
+.textAnimatedGlowL {
   text-align: center;
-  background: linear-gradient(45deg , #ffb300, #ff7235, #ffb300);
+  background: linear-gradient(45deg, #ffb300, #ff7235, #ffb300);
   background-size: 350%;
   color: #000;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shine 12s linear infinite;
-  
-  }
-  
-  @keyframes breatheD {
+  animation: shineL 12s linear infinite;
+}
+
+@keyframes breatheD {
   0% {
     box-shadow: 0 0 6px #00bbff;
   }
@@ -178,33 +176,45 @@
   100% {
     box-shadow: 0 0 6px #00bbff;
   }
+}
+
+@keyframes breatheL {
+  0% {
+    box-shadow: 0 0 6px #ffb300;
   }
-  
-  @keyframes breatheL {
-    0% {
-      box-shadow: 0 0 6px #ffb300;
-    }
-    50% {
-      box-shadow: 0 0 24px #ffb300;
-    }
-    100% {
-      box-shadow: 0 0 6px #ffb300;
-    }
-    }
-  
-  @keyframes shine {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-        background-position: 200% 0;
-    }
-    100% {
-        background-position: 0 0;
-    }
-    }
-  
-  .boxGlowD {
+  50% {
+    box-shadow: 0 0 24px #ffb300;
+  }
+  100% {
+    box-shadow: 0 0 6px #ffb300;
+  }
+}
+
+@keyframes shineD {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+@keyframes shineL {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.boxGlowD {
   background-color: black;
   width: fit-content;
   height: fit-content;
@@ -212,13 +222,13 @@
   cursor: pointer;
   box-shadow: 0 0 8px #00bbff;
   transition: all 0.5s ease-in-out;
-  }
-  
-  .boxGlowD:hover {
+}
+
+.boxGlowD:hover {
   box-shadow: 0 0 24px #00bbff;
-  }
-  
-  .boxGlowL {
+}
+
+.boxGlowL {
   background-color: black;
   width: fit-content;
   height: fit-content;
@@ -226,57 +236,56 @@
   cursor: pointer;
   box-shadow: 0 0 8px #ffb300;
   transition: all 0.5s ease-in-out;
-  }
-  
-  .boxGlowL:hover {
+}
+
+.boxGlowL:hover {
   box-shadow: 0 0 24px #ffb300;
-  }
-  
-  .navglowL {
-    content: '';
-    position: relative;
-    background: linear-gradient(45deg , #ffb300, #ff7235, #ffb300);
-    background-size: 600%;
-    width: calc(100%);
-    height: 55px;
-    z-index: 2;
-    border-radius : 8px;
-    border-radius: inherit;
-    animation: steam 24s linear infinite;
-    transition: all ease-in-out 0.25s;
-  }
-  
-  .navglowD {
-    content: '';
-    position: relative;
-    background: linear-gradient(45deg , #00bbff, #9978e5, #00bbff);
-    background-size: 600%;
-    width: calc(100%);
-    height: 55px;
-    z-index: 3;
-    border-radius : 8px;
-    border-radius: inherit;
-    animation: steam 24s linear infinite;
-    transition: all ease-in-out 0.25s;
-  }
-  
-  .glowBreatheD {
-    background-color: black;
-    width: fit-content;
-    height: fit-content;
-    border-radius: 12px;
-    cursor: pointer;
-    box-shadow: 0 0 8px #00bbff;
-    animation: breatheD 3s ease-in-out infinite;
-    }
-  
-  .glowBreatheL {
-    background-color: black;
-    width: fit-content;
-    height: fit-content;
-    border-radius: 12px;
-    cursor: pointer;
-    box-shadow: 0 0 8px #ffb300;
-    animation: breatheL 3s ease-in-out infinite;
-    }
-  
+}
+
+.navglowL {
+  content: '';
+  position: relative;
+  background: linear-gradient(45deg, #ffb300, #ff7235, #ffb300);
+  background-size: 600%;
+  width: calc(100%);
+  height: 55px;
+  z-index: 2;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamNavL 24s linear infinite;
+  transition: all ease-in-out 0.25s;
+}
+
+.navglowD {
+  content: '';
+  position: relative;
+  background: linear-gradient(45deg, #00bbff, #9978e5, #00bbff);
+  background-size: 600%;
+  width: calc(100%);
+  height: 55px;
+  z-index: 3;
+  border-radius: 8px;
+  border-radius: inherit;
+  animation: steamNavD 24s linear infinite;
+  transition: all ease-in-out 0.25s;
+}
+
+.glowBreatheD {
+  background-color: black;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 12px;
+  cursor: pointer;
+  box-shadow: 0 0 8px #00bbff;
+  animation: breatheD 3s ease-in-out infinite;
+}
+
+.glowBreatheL {
+  background-color: black;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 12px;
+  cursor: pointer;
+  box-shadow: 0 0 8px #ffb300;
+  animation: breatheL 3s ease-in-out infinite;
+}
