--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@
   font-size: 12px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 @media (min-width: 768px) {
     * {
         font-size: 14px;
@@ -35,6 +39,7 @@
         font-size: 18px;
     }
 }
+
 @media (min-width: 1024px) {
     .responsive-font {
         font-size: 32px;
@@ -43,6 +48,7 @@
         font-size: 20px;
     }
 }
+
 @media (min-width: 1368px) {
     .responsive-font {
         font-size: 36px;
@@ -260,82 +266,82 @@
   width: 100%;
 }
 .carousel .slider.animated {
-  -webkit-transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -ms-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
-}
-.carousel .slide {
-  min-width: 100%;
-  margin: 0;
-  text-align: center;
-}
-.carousel .slide img {
-  width: 100%;
-  vertical-align: middle;
-  border: 0;
-}
-.carousel .slide .legend {
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  margin-left: -45%;
-  width: 90%;
-  border-radius: 10px;
-  background: #000;
-  color: #fff;
-  padding: 10px;
-  font-size: 12px;
-  text-align: center;
-  opacity: 0.25;
-  -webkit-transition: opacity 0.35s ease-in-out;
-  -moz-transition: opacity 0.35s ease-in-out;
-  -ms-transition: opacity 0.35s ease-in-out;
-  -o-transition: opacity 0.35s ease-in-out;
-  transition: opacity 0.35s ease-in-out;
-}
-.carousel .control-dots {
-  position: relative;
-  bottom: 0;
-  padding: 0;
-  text-align: center;
-  width: 100%;
-  z-index: 1;
-}
-@media (min-width: 960px) {
-  .carousel .control-dots {
-      bottom: 0;
+    -webkit-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
   }
-}
-.carousel .control-dots .dot {
-  -webkit-transition: opacity 0.25s ease-in;
-  -moz-transition: opacity 0.25s ease-in;
-  -ms-transition: opacity 0.25s ease-in;
-  -o-transition: opacity 0.25s ease-in;
-  transition: opacity 0.25s ease-in;
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
-  background: rgb(239, 239, 239);
-  border-radius: 50%;
-  width: 6px;
-  height: 6px;
-  cursor: pointer;
-  display: inline-block;
-  margin: 0 10px;
-}
-.carousel .control-dots .dot.selected,
-.carousel .control-dots .dot:hover {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.carousel:hover .slide .legend {
-  opacity: 1;
-}
-
+  .carousel .slide {
+    min-width: 100%;
+    margin: 0;
+    text-align: center;
+  }
+  .carousel .slide img {
+    width: 100%;
+    vertical-align: middle;
+    border: 0;
+  }
+  .carousel .slide .legend {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    margin-left: -45%;
+    width: 90%;
+    border-radius: 10px;
+    background: #000;
+    color: #fff;
+    padding: 10px;
+    font-size: 12px;
+    text-align: center;
+    opacity: 0.25;
+    -webkit-transition: opacity 0.35s ease-in-out;
+    -moz-transition: opacity 0.35s ease-in-out;
+    -ms-transition: opacity 0.35s ease-in-out;
+    -o-transition: opacity 0.35s ease-in-out;
+    transition: opacity 0.35s ease-in-out;
+  }
+  .carousel .control-dots {
+    position: relative;
+    bottom: 0;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+  }
+  @media (min-width: 960px) {
+    .carousel .control-dots {
+        bottom: 0;
+    }
+  }
+  .carousel .control-dots .dot {
+    -webkit-transition: opacity 0.25s ease-in;
+    -moz-transition: opacity 0.25s ease-in;
+    -ms-transition: opacity 0.25s ease-in;
+    -o-transition: opacity 0.25s ease-in;
+    transition: opacity 0.25s ease-in;
+    opacity: 0.3;
+    filter: alpha(opacity=30);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+    background: rgb(239, 239, 239);
+    border-radius: 50%;
+    width: 6px;
+    height: 6px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 10px;
+  }
+  .carousel .control-dots .dot.selected,
+  .carousel .control-dots .dot:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+  .carousel:hover .slide .legend {
+    opacity: 1;
+  }
+  
